--- a/WishList/Views/Shared/Error.cshtml
+++ b/WishList/Views/Shared/Error.cshtml
@@ -3,5 +3,7 @@
     ViewData["Title"] = "Error";
 }
 
-<p>An error has occured. Please try again.</p>
+<p>
+    An error has occured. Please try again.
+</p>
 
