--- a/WishList/Views/Shared/Error.cshtml
+++ b/WishList/Views/Shared/Error.cshtml
@@ -2,8 +2,5 @@
 @{
     ViewData["Title"] = "Error";
 }
-
-<p>
-    An error has occured. Please try again.
-</p>
+<p>An error has occurred. Please try again.</p>
 
